Add basic functionality

--- a/cabal.project
+++ b/cabal.project
@@ -3,5 +3,6 @@ packages: .
 package timerep
   tests: true
   ghc-options:
-    -Weverything -Werror -Wno-unsafe -Wno-missing-safe-haskell-mode
+    -Weverything -Werror -Wno-safe -Wno-unsafe -Wno-missing-safe-haskell-mode
     -Wno-implicit-prelude -Wno-missing-local-signatures
+    -Wno-missing-import-lists -Wno-missing-kind-signatures
