--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,10 @@ resolver: lts-19.4
 packages:
 - .
 ghc-options:
-  "$locals": -Weverything -Werror -Wno-unsafe -Wno-missing-safe-haskell-mode
-             -Wno-implicit-prelude -Wno-missing-local-signatures
+  "$locals": -Weverything -Werror -Wno-safe -Wno-unsafe
+             -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
+             -Wno-missing-local-signatures -Wno-missing-import-lists
+             -Wno-missing-kind-signatures
+
 nix:
   shell-file: nix/stack.nix
