--- a/timerep.cabal
+++ b/timerep.cabal
@@ -20,42 +20,12 @@ source-repository head
   type:     git
   location: https://github.com/tbidne/timerep
 
-common common-exts
-  default-extensions:
-    BangPatterns
-    ConstraintKinds
-    DataKinds
-    DeriveFunctor
-    DeriveGeneric
-    DeriveTraversable
-    DerivingStrategies
-    DerivingVia
-    FlexibleContexts
-    FlexibleInstances
-    FunctionalDependencies
-    GADTs
-    GeneralizedNewtypeDeriving
-    ImportQualifiedPost
-    InstanceSigs
-    LambdaCase
-    MultiParamTypeClasses
-    MultiWayIf
-    NamedFieldPuns
-    NumericUnderscores
-    OverloadedStrings
-    PatternSynonyms
-    RankNTypes
-    ScopedTypeVariables
-    StandaloneDeriving
-    StandaloneKindSignatures
-    TupleSections
-    TypeApplications
-    TypeFamilyDependencies
-    TypeOperators
-
 library
-  import:           common-exts
   exposed-modules:  Data.TimeRep
-  build-depends:    base >=4.14.0.0 && <4.17
+  build-depends:
+    , base     >=4.14.0.0 && <4.17
+    , deepseq  ^>=1.4.4.0
+    , text     ^>=1.2.3.2
+
   hs-source-dirs:   src
   default-language: Haskell2010
