--- a/timerep.cabal
+++ b/timerep.cabal
@@ -23,8 +23,9 @@ source-repository head
 library
   exposed-modules:  Data.TimeRep
   build-depends:
-    , base     >=4.14.0.0 && <4.17
-    , deepseq  ^>=1.4.4.0
+    , algebra-simple  ^>=0.1
+    , base            >=4.14.0.0 && <4.17
+    , deepseq         ^>=1.4.4.0
 
   hs-source-dirs:   src
   default-language: Haskell2010
