Rename TimeRep -> RelativeTime

--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,6 @@
 packages: .
 
-package timerep
+package relative-time
   tests: true
   ghc-options:
     -Wall -Wcompat -Werror -Widentities -Wunused-binds
