Add doctests, rename formatTime -> formatSeconds

--- a/.github/workflows/ghc_9-2-2.yaml
+++ b/.github/workflows/ghc_9-2-2.yaml
@@ -27,3 +27,10 @@ jobs:
           nix-shell nix/ghc_9-2-2.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always"
+
+      - name: Doc Tests
+        run: |
+          nix-shell nix/ghc_9-2-2.nix --command \
+            "cabal update && \
+             cabal build --write-ghc-environment-files=always && \
+             RUN_DOCTEST=true cabal test doctest --test-show-details=direct"
