--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -29,3 +29,13 @@ library
 
   hs-source-dirs:   src
   default-language: Haskell2010
+
+test-suite doctest
+  type:             exitcode-stdio-1.0
+  main-is:          Main.hs
+  build-depends:
+    , base
+    , doctest  >=0.16.3 && <0.21
+
+  hs-source-dirs:   test/doctest
+  default-language: Haskell2010
