--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -56,3 +56,22 @@ test-suite doctest
 
   hs-source-dirs:   test/doctest
   default-language: Haskell2010
+
+test-suite unit
+  import:           common-exts
+  type:             exitcode-stdio-1.0
+  main-is:          Main.hs
+  other-modules:
+    Unit.Data.Time.Relative
+    Unit.MaxRuns
+
+  build-depends:
+    , base
+    , hedgehog        >=1.0.2   && <1.2
+    , relative-time
+    , tagged          ^>=0.8.6
+    , tasty           >=1.1.0.3 && <1.5
+    , tasty-hedgehog  ^>=1.2.0
+
+  hs-source-dirs:   test/unit
+  default-language: Haskell2010
