--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -26,16 +26,20 @@ source-repository head
 common common-exts
   default-extensions:
     ApplicativeDo
+    DataKinds
     DeriveAnyClass
     DeriveDataTypeable
     DeriveGeneric
     DerivingStrategies
     DerivingVia
+    FlexibleInstances
+    GADTs
     ImportQualifiedPost
     LambdaCase
     MultiParamTypeClasses
     NumericUnderscores
     OverloadedStrings
+    StandaloneKindSignatures
     TypeApplications
 
 library
@@ -45,6 +49,7 @@ library
     , algebra-simple  ^>=0.1
     , base            >=4.14.0.0 && <4.17
     , deepseq         ^>=1.4.4.0
+    , optics-core     ^>=0.4
 
   hs-source-dirs:   src
   default-language: Haskell2010
