--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -82,6 +82,7 @@ test-suite unit
     , tagged          ^>=0.8.6
     , tasty           >=1.1.0.3 && <1.5
     , tasty-hedgehog  ^>=1.2.0
+    , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
   default-language: Haskell2010
