--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -6,7 +6,7 @@ license-file:       LICENSE
 tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
 copyright:          2022 Thomas Bidne
 author:             Thomas Bidne
-maintainer:         tbidne@prontonmail.com
+maintainer:         tbidne@protonmail.com
 homepage:           https://github.com/tbidne/relative-time/
 bug-reports:        https://github.com/tbidne/relative-time/issues
 synopsis:           Defines a type for relative time with second precision.
