--- a/cabal.project
+++ b/cabal.project
@@ -11,3 +11,5 @@ source-repository-package
   type: git
   location: https://github.com/tbidne/algebra-simple.git
   tag: be105b31e3bd2bc00c69cd5c1e869294b26fbb17
+
+test-show-details: direct
