--- a/stack.yaml
+++ b/stack.yaml
@@ -8,8 +8,9 @@ ghc-options:
     -Wmissing-home-modules -Wmissing-export-lists -Wpartial-fields
     -Wredundant-constraints -Wunused-packages -Wmissing-deriving-strategies
 extra-deps:
+- env-guard-0.2@sha256:59410eed9b9ddbd115760a59c7170927320d8612e414701d323a0c8985c97523,1251
 - tasty-hedgehog-1.2.0.0@sha256:3deb98e9a9de9e27c25d02b7fe92ad5cf68d5163fdaaf35bca3923b3e671d46d,1803
 - git: https://github.com/tbidne/algebra-simple.git
-  commit: 086da47c888d0662f4047ad04214df03097d3b08
+  commit: aa8ebb5c324248dba28d2b707363939c4904046b
 nix:
   shell-file: nix/stack_lts-19.nix
