--- a/.github/workflows/cabal.yaml
+++ b/.github/workflows/cabal.yaml
@@ -28,6 +28,11 @@ jobs:
       - name: Compile
         run: cabal build
 
+      - name: Doc Tests
+        run : |
+          cabal build --write-ghc-environment-files=always
+          RUN_DOCTEST=1 cabal test doctest
+
       - name: Unit Tests
         env:
           MAX_RUNS: 100000
