--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -61,8 +61,8 @@ test-suite doctest
   main-is:          Main.hs
   build-depends:
     , base
-    , doctest    >=0.16.3 && <0.21
-    , env-guard  ^>=0.2
+    , doctest-parallel  ^>=0.2
+    , env-guard         ^>=0.2
 
   hs-source-dirs:   test/doctest
   default-language: Haskell2010
@@ -82,7 +82,7 @@ test-suite unit
     , relative-time
     , tagged          ^>=0.8.6
     , tasty           >=1.1.0.3 && <1.5
-    , tasty-hedgehog  >=1.2.0 && <1.4
+    , tasty-hedgehog  >=1.2.0   && <1.4
     , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
