Add bounded instances

--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -49,6 +49,7 @@ library
   build-depends:
     , algebra-simple  ^>=0.1
     , base            >=4.14.0.0 && <4.18
+    , bounds          ^>=0.1
     , deepseq         ^>=1.4.4.0
     , optics-core     ^>=0.4
 
