--- a/cabal.project
+++ b/cabal.project
@@ -12,4 +12,9 @@ source-repository-package
   location: https://github.com/tbidne/algebra-simple.git
   tag: c8aaa4495964ecea9bb898c4fcb8b1c718ecc813
 
+source-repository-package
+  type: git
+  location: https://github.com/tbidne/bounds.git
+  tag: 7a8832ef4a55d565e72fab553a4d485329235bf7
+
 test-show-details: direct
