--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -3,7 +3,7 @@ name:               relative-time
 version:            0.1
 license:            MIT
 license-file:       LICENSE
-tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
+tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.3
 copyright:          2022 Thomas Bidne
 author:             Thomas Bidne
 maintainer:         tbidne@protonmail.com
@@ -72,18 +72,14 @@ test-suite unit
   import:           common-exts
   type:             exitcode-stdio-1.0
   main-is:          Main.hs
-  other-modules:
-    Unit.Data.Time.Relative
-    Unit.MaxRuns
-
+  other-modules:    Unit.Data.Time.Relative
   build-depends:
     , algebra-simple
     , base
     , hedgehog        >=1.0.2   && <1.3
     , relative-time
-    , tagged          ^>=0.8.6
     , tasty           >=1.1.0.3 && <1.5
-    , tasty-hedgehog  >=1.2.0   && <1.4
+    , tasty-hedgehog  >=1.2.0   && <1.5
     , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
