--- a/.github/workflows/cabal.yaml
+++ b/.github/workflows/cabal.yaml
@@ -17,7 +17,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ["8.10.7", "9.0.2", "9.2.4", "9.4.2"]
+        ghc:
+        - 8.10.7
+        - 9.0.2
+        - 9.2.5
+        - 9.4.3
     steps:
       - uses: actions/checkout@v3.0.2
 
@@ -34,6 +38,4 @@ jobs:
           RUN_DOCTEST=1 cabal test doctest
 
       - name: Unit Tests
-        env:
-          MAX_RUNS: 100000
-        run: cabal test unit
+        run: cabal test unit --test-options '--hedgehog-tests 100000'
