--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-19.28
+resolver: lts-20.3
 packages:
 - .
 ghc-options:
@@ -9,6 +9,7 @@ ghc-options:
     -Wredundant-constraints -Wunused-packages -Wmissing-deriving-strategies
 extra-deps:
 - env-guard-0.2@sha256:59410eed9b9ddbd115760a59c7170927320d8612e414701d323a0c8985c97523,1251
+- hedgehog-1.1.1@sha256:301b45815b0e265a683aba0971c1246bfce0ad60b09fcd60bc782016254a291a,4639
 - tasty-hedgehog-1.2.0.0@sha256:3deb98e9a9de9e27c25d02b7fe92ad5cf68d5163fdaaf35bca3923b3e671d46d,1803
 - git: https://github.com/tbidne/algebra-simple.git
   commit: 2c8a79e8d3bf67c99e4851c557bf68a44c512307
