Update license, remove haddockc job, remove stack support

--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -3,8 +3,8 @@ name:               relative-time
 version:            0.1
 license:            MIT
 license-file:       LICENSE
-tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.3
-copyright:          2022 Thomas Bidne
+tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.4
+copyright:          2022-2023 Thomas Bidne
 author:             Thomas Bidne
 maintainer:         tbidne@protonmail.com
 homepage:           https://github.com/tbidne/relative-time/
