--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -62,8 +62,8 @@ test-suite doctest
   main-is:          Main.hs
   build-depends:
     , base
-    , doctest-parallel  ^>=0.2
-    , env-guard         ^>=0.2
+    , doctest    >=0.16.3 && <0.22
+    , env-guard  ^>=0.2
 
   hs-source-dirs:   test/doctest
   default-language: Haskell2010
