Add windows to CI

--- a/.github/workflows/cabal.yaml
+++ b/.github/workflows/cabal.yaml
@@ -45,3 +45,33 @@ jobs:
 
       - name: Unit Tests
         run: cabal test unit --test-options '--hedgehog-tests 100000'
+  cabal_windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        ghc:
+          - "8.10.7"
+          - "9.0.2"
+          - "9.2.5"
+          - "9.4.4"
+    runs-on: "windows-latest"
+    steps:
+      - uses: actions/checkout@v3.3.0
+
+      - uses: haskell/actions/setup@v2.3.4
+        with:
+          ghc-version: ${{ matrix.ghc }}
+
+      - name: Compile
+        run: cabal build
+
+      - name: Doc Tests
+        run : |
+          cabal configure --enable-tests --write-ghc-environment-files always
+          cabal build
+
+          set RUN_DOCTEST=1
+          cabal test doctest
+
+      - name: Unit Tests
+        run: cabal test unit --test-options '--hedgehog-tests 100000'
