Add windows to CI

--- a/.github/workflows/cabal.yaml
+++ b/.github/workflows/cabal.yaml
@@ -21,10 +21,14 @@ jobs:
           - "9.0.2"
           - "9.2.5"
           - "9.4.4"
-        os:
-          - "macos-latest"
-          - "ubuntu-latest"
-    runs-on: ${{ matrix.os }}
+        platform:
+          - os: "macos-latest"
+            set-env: "export"
+          - os: "ubuntu-latest"
+            set-env: "export"
+          - os: "windows-latest"
+            set-env: "set"
+    runs-on: ${{ matrix.platform.os }}
     steps:
       - uses: actions/checkout@v3.3.0
 
@@ -37,11 +41,11 @@ jobs:
 
       - name: Doc Tests
         run : |
-          cabal configure \
-            --enable-tests \
-            --write-ghc-environment-files always
+          cabal configure --enable-tests --write-ghc-environment-files always
           cabal build
-          RUN_DOCTEST=1 cabal test doctest
+
+          ${{ matrix.platform.set-env }} RUN_DOCTEST=1
+          cabal test doctest
 
       - name: Unit Tests
         run: cabal test unit --test-options '--hedgehog-tests 100000'
