--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -3,7 +3,9 @@ name:               relative-time
 version:            0.1
 license:            MIT
 license-file:       LICENSE
-tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4
+tested-with:
+  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4 || ==9.6.1
+
 copyright:          2022-2023 Thomas Bidne
 author:             Thomas Bidne
 maintainer:         tbidne@protonmail.com
@@ -23,7 +25,7 @@ source-repository head
   type:     git
   location: https://github.com/tbidne/relative-time
 
-common common-exts
+common common-lang
   default-extensions:
     ApplicativeDo
     DataKinds
@@ -44,11 +46,11 @@ common common-exts
     TypeOperators
 
 library
-  import:           common-exts
+  import:           common-lang
   exposed-modules:  Data.Time.Relative
   build-depends:
     , algebra-simple  ^>=0.1
-    , base            >=4.14.0.0 && <4.18
+    , base            >=4.14.0.0 && <4.19
     , bounds          ^>=0.1
     , deepseq         ^>=1.4.4.0
     , optics-core     ^>=0.4
@@ -57,7 +59,7 @@ library
   default-language: Haskell2010
 
 test-suite doctest
-  import:           common-exts
+  import:           common-lang
   type:             exitcode-stdio-1.0
   main-is:          Main.hs
   build-depends:
@@ -69,7 +71,7 @@ test-suite doctest
   default-language: Haskell2010
 
 test-suite unit
-  import:           common-exts
+  import:           common-lang
   type:             exitcode-stdio-1.0
   main-is:          Main.hs
   other-modules:    Unit.Data.Time.Relative
