--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -85,4 +85,5 @@ test-suite unit
     , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
+  ghc-options:      -threaded -with-rtsopts=-N
   default-language: Haskell2010
