--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -4,7 +4,7 @@ version:            0.1
 license:            MIT
 license-file:       LICENSE
 tested-with:
-  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4 || ==9.6.1
+  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2
 
 copyright:          2022-2023 Thomas Bidne
 author:             Thomas Bidne
@@ -52,7 +52,7 @@ library
     , algebra-simple  ^>=0.1
     , base            >=4.14.0.0 && <4.19
     , bounds          ^>=0.1
-    , deepseq         ^>=1.4.4.0
+    , deepseq         >=1.4.4.0  && <1.6
     , optics-core     ^>=0.4
 
   hs-source-dirs:   src
@@ -64,7 +64,7 @@ test-suite doctest
   main-is:          Main.hs
   build-depends:
     , base
-    , doctest    >=0.16.3 && <0.22
+    , doctest    >=0.16.3 && <0.23
     , env-guard  ^>=0.2
 
   hs-source-dirs:   test/doctest
@@ -78,7 +78,7 @@ test-suite unit
   build-depends:
     , algebra-simple
     , base
-    , hedgehog        >=1.0.2   && <1.3
+    , hedgehog        >=1.0.2   && <1.5
     , relative-time
     , tasty           >=1.1.0.3 && <1.5
     , tasty-hedgehog  >=1.2.0   && <1.5
