--- a/relative-time.cabal
+++ b/relative-time.cabal
@@ -4,7 +4,7 @@ version:            0.1
 license:            MIT
 license-file:       LICENSE
 tested-with:
-  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2
+  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1
 
 copyright:          2022-2023 Thomas Bidne
 author:             Thomas Bidne
@@ -50,7 +50,7 @@ library
   exposed-modules:  Data.Time.Relative
   build-depends:
     , algebra-simple  ^>=0.1
-    , base            >=4.14.0.0 && <4.19
+    , base            >=4.14.0.0 && <4.20
     , bounds          ^>=0.1
     , deepseq         >=1.4.4.0  && <1.6
     , optics-core     ^>=0.4
@@ -80,7 +80,7 @@ test-suite unit
     , base
     , hedgehog        >=1.0.2   && <1.5
     , relative-time
-    , tasty           >=1.1.0.3 && <1.5
+    , tasty           >=1.1.0.3 && <1.6
     , tasty-hedgehog  >=1.2.0   && <1.5
     , tasty-hunit     >=0.9     && <0.11
 
