--- a/cabal.project
+++ b/cabal.project
@@ -10,13 +10,15 @@ package relative-time
 source-repository-package
   type: git
   location: https://github.com/tbidne/algebra-simple.git
-  tag: a23ee42d30893dee44e96308c49e9441edfa052b
+  tag: 405fc928e70a8378479cc5195db06374b829c1ec
 
 source-repository-package
   type: git
   location: https://github.com/tbidne/bounds.git
-  tag: 3223a637ab618a2bbf3c40ca0225484043a7bacb
+  tag: b0d13257c28399f3ac1a3c05c40a8d5ca275cf50
 
-allow-newer: hedgehog-1.2:template-haskell
+allow-newer: hedgehog:containers
+allow-newer: hedgehog:template-haskell
+allow-newer: tasty-hedgehog:base
 
 test-show-details: direct
